# common

./: .clang-format  README.md
c++17bootstrap/: CMakeLists.txt
c++17bootstrap/include/: common.h
c++17bootstrap/src/: CMakeLists.txt  main.cpp
